Upload a video URL
Upload a video URL

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 
             <div class="publication-video">
               <!-- Youtube embed code here -->
-              <iframe src="" frameborder="0" allow="autoplay; encrypted-media"
+              <iframe src="https://youtu.be/Wb6hJrp4kCM?si=jG0gNSCofS_Im0TU" frameborder="0" allow="autoplay; encrypted-media"
                 allowfullscreen></iframe>
             </div>
           </div>
